--- a/content/testing-with-vynetest.mdx
+++ b/content/testing-with-vynetest.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testing with vynetest
-description: Lern to carry out tests
+description: Learn to carry out tests
 ---
 
 import { Hint } from './components/hint'
